<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_brown">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEnter"
            style="@style/simple_button"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/grey"
            android:onClick="onClickGoCatalog"
            android:text="@string/Enter"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnReg"
            style="@style/simple_button"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:backgroundTint="@color/black"
            android:text="@string/Registration"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogle"
            style="@style/simple_button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#5DD678"
            android:text="@string/Google"
            app:layout_constraintStart_toStartOf="@+id/btnEnter"
            app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVK"
            style="@style/simple_button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#3A73A5"
            android:text="@string/Vk"
            app:layout_constraintEnd_toEndOf="@+id/btnReg"
            app:layout_constraintTop_toBottomOf="@+id/btnReg" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="#616161"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="#616161"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forgot"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Or"
            android:textColor="#000000"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEnter" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif"
            android:text="@string/EnterText"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="205dp"
            android:layout_height="210dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ico" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:hint="@string/name_email_com"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="#80000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:autofillHints="·"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#80000000"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>